# CodeBot

./: .gitignore  .replit  dbfix.py  migrate_db.py  pyproject.toml  replit.nix  run.py  todo.txt
CodeBot/: bot.py
CodeBot/BotSystem/: __init__.py  _handlers.py
CodeBot/Commands/: __init__.py  commands.py  handlers.py
CodeBot/bots/: networking.py
codebot/: bot.py  cog.py
old/CodeBot/BotSystem/: manage.py
